- Applied new color scheme     - Still needs a few touches - Contact Section re-designed     - Added a 'Report a Bug' section, still needs testing     - Changed the music button to a secret, still need implementation - Home Activity now has the Course Codes and Names in proper order - Created the Course View layout - Calendar is now almost in its complete state     - Now supports calendar caching     - Now also supports caching of day dictionary     - Date label now shows dates in proper format         - With day of date feature implemented as well     - Event Views now dislpay only the information that they need (auto-resize)         - The 'DAY 1'/'DAY 2' events no longer display - Fixed a lot of the XML code to have @style implemented in them - Created the internet checker

--- a/app/src/main/res/drawable/calendar_cell.xml
+++ b/app/src/main/res/drawable/calendar_cell.xml
@@ -2,9 +2,8 @@
 <level-list xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Default Cell -->
     <item android:maxLevel="0">
-        <shape>
-            <solid android:color="@color/calendarCellBackground"/>
-            <corners android:radius="5dp"/>
+        <shape android:shape="oval">
+            <solid android:color="@color/cellDefault"/>
             <padding android:bottom="2dp" android:left="2dp" android:right="2dp" android:top="2dp"/>
             <stroke android:color="@android:color/transparent"/>
         </shape>
@@ -12,9 +11,8 @@
 
     <!-- Default Cell Event -->
     <item android:maxLevel="1">
-        <shape>
-            <gradient android:startColor="@color/calendarCellBackground" android:centerColor="@color/calendarCellBackground" android:endColor="@color/navigationBar" android:type="linear" android:angle="270" android:centerY=".7"/>
-            <corners android:radius="5dp"/>
+        <shape android:shape="oval">
+            <solid android:color="@color/cellEvent"/>
             <padding android:bottom="2dp" android:left="2dp" android:right="2dp" android:top="2dp"/>
             <stroke android:color="@android:color/transparent"/>
         </shape>
@@ -22,9 +20,8 @@
 
     <!-- Default Cell Selected -->
     <item android:maxLevel="2">
-        <shape>
-            <solid android:color="@color/calendarCellBackground"/>
-            <corners android:radius="5dp"/>
+        <shape android:shape="oval">
+            <solid android:color="@color/cellDefault"/>
             <padding android:bottom="2dp" android:left="2dp" android:right="2dp" android:top="2dp"/>
             <stroke android:color="@color/navigationBar" android:width="3dp"/>
         </shape>
@@ -32,9 +29,8 @@
 
     <!-- Default Cell Event Selected -->
     <item android:maxLevel="3">
-        <shape>
-            <gradient android:startColor="@color/calendarCellBackground" android:centerColor="@color/calendarCellBackground" android:endColor="@color/navigationBar" android:type="linear" android:angle="270" android:centerY=".7"/>
-            <corners android:radius="5dp"/>
+        <shape android:shape="oval">
+            <solid android:color="@color/cellEvent"/>
             <padding android:bottom="2dp" android:left="2dp" android:right="2dp" android:top="2dp"/>
             <stroke android:color="@color/navigationBar" android:width="3dp"/>
         </shape>
@@ -42,42 +38,44 @@
 
     <!-- Today Cell -->
     <item android:maxLevel="4">
-        <shape>
-            <solid android:color="@color/accent"/>
-            <corners android:radius="5dp"/>
+        <shape android:shape="oval">
+            <solid android:color="@color/cellDefault"/>
             <padding android:bottom="2dp" android:left="2dp" android:right="2dp" android:top="2dp"/>
-            <stroke android:color="@android:color/transparent"/>
+            <stroke android:color="@color/cellTodayBorder" android:width="2dp"/>
         </shape>
     </item>
 
     <!-- Today Cell Event -->
     <item android:maxLevel="5">
-        <shape>
-            <gradient android:startColor="@color/accent" android:centerColor="@color/calendarCellBackground" android:endColor="@color/navigationBar" android:type="linear" android:angle="270" android:centerY=".7"/>
-            <corners android:radius="5dp"/>
+        <shape android:shape="oval">
+            <solid android:color="@color/cellEvent"/>
             <padding android:bottom="2dp" android:left="2dp" android:right="2dp" android:top="2dp"/>
-            <stroke android:color="@android:color/transparent"/>
+            <stroke android:color="@color/cellTodayBorder" android:width="2dp"/>
         </shape>
     </item>
 
     <!-- Today Cell Selected -->
     <item android:maxLevel="6">
-        <shape>
-            <solid android:color="@color/accent"/>
-            <corners android:radius="5dp"/>
+        <shape android:shape="oval">
+            <solid android:color="@color/cellDefault"/>
             <padding android:bottom="2dp" android:left="2dp" android:right="2dp" android:top="2dp"/>
-            <stroke android:color="@color/navigationBar" android:width="3dp"/>
+            <stroke android:color="@color/cellTodayBorder" android:width="3dp"/>
         </shape>
     </item>
 
     <!-- Today Cell Event Selected -->
     <item android:maxLevel="7">
-        <shape>
-            <gradient android:startColor="@color/accent" android:centerColor="@color/calendarCellBackground" android:endColor="@color/navigationBar" android:type="linear" android:angle="270" android:centerY=".7"/>
-            <corners android:radius="5dp"/>
+        <shape android:shape="oval">
+            <solid android:color="@color/cellEvent"/>
             <padding android:bottom="2dp" android:left="2dp" android:right="2dp" android:top="2dp"/>
-            <stroke android:color="@color/navigationBar" android:width="3dp"/>
+            <stroke android:color="@color/cellTodayBorder" android:width="3dp"/>
         </shape>
     </item>
 
 </level-list>
+
+    <!--let colorCellDefault = colorEventViewBackground.withAlphaComponent(0.5)-->
+    <!--let colorCellEvent = colorEventViewBackground.withAlphaComponent(0.85)-->
+    <!--let colorTodayDot = colorWhiteText-->
+    <!--let colorBorder = colorNavigationBar-->
+    <!--let colorCellText = colorWhiteText-->
