--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,10 +6,12 @@
     <dimen name="defaultCellSize">56dp</dimen>
     <dimen name="largeCellSize">104dp</dimen>
 
-    <dimen name="EVHeight">286dp</dimen>
-    <dimen name="EVInfoHeight">193dp</dimen>
+    <dimen name="EVHeight">185dp</dimen>
+    <dimen name="EVInfoHeight">100dp</dimen>
+    <dimen name="EVTitleHeight">66dp</dimen>
     <dimen name="EVTitleInfoTextSize">21sp</dimen>
-    <dimen name="EVDateLocationTextSize">17sp</dimen>
+    <dimen name="EVDescriptionTextSize">17sp</dimen>
+    <dimen name="EVDateLocationTextSize">15sp</dimen>
 
     <dimen name="CalSDayTextSize">17sp</dimen>
     <dimen name="CalSWeekTextSize">20sp</dimen>
