--- a/app/src/main/res/drawable/calendar_cell_selector.xml
+++ b/app/src/main/res/drawable/calendar_cell_selector.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape>
-            <solid android:color="@color/calendarCellBackground"/>
-            <corners android:radius="5dp"/>
+        <shape android:shape="oval">
+            <solid android:color="@android:color/transparent"/>
             <padding android:bottom="2dp" android:left="2dp" android:right="2dp" android:top="2dp"/>
             <stroke android:color="@color/navigationBar" android:width="3dp"/>
         </shape>
